[package]
name = "yerd-dump"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Native PHP zend_extension that streams Laravel/PHP telemetry to Yerd's dump server"
license = "MIT"
repository = "https://github.com/yerd/yerd-php-ext"
publish = false

[lib]
name = "yerd_dump"
crate-type = ["cdylib"]

[dependencies]
# Pinned EXACTLY (see plan Decision #2): the observer + IniEntryDef API surface this crate
# relies on must not shift under a 0.15 patch bump.
ext-php-rs = { version = "=0.15.15", features = ["observer"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"

[dev-dependencies]
serde_json = "1"

[profile.release]
# Single source of truth for stripping (plan Phase C.2): portable and avoids an ad-hoc
# `strip` shell step that can break dlopen on macOS. The CI load-smoke confirms the
# zend_extension entry symbols survive.
strip = "symbols"
lto = true
codegen-units = 1
opt-level = 3
panic = "unwind" # observer bodies rely on catch_unwind; must NOT abort on panic
